--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   ionicons: ^0.1.2
   google_fonts: ^2.1.0
+  flutter_native_splash: ^1.2.4
 
 dev_dependencies:
   flutter_test:
